--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,52 @@
 body{
+    margin: 0 0 0 0;
+    background-color: #eeeeee;
 }
+
+.menu-li a{
+    display: block;
+    padding: 14px 16px;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.menu-li a:hover {
+    background-color: #111;
+  }
+
+.menu-ul {
+    background-color: #333;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    padding-left: 4vw;
+}
+
+
+.home_flex {
+    width: 100%;
+    height:75vh;
+    display: flex;
+    align-items: center;
+    background-image: url("logo.svg");
+    background-color: black;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.section_cover_letter{
+    height:75vh;
+    margin-top: 20vh;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    font-size: 30px;
+}
+a:active {
+    background-color: yellow;
+  }
