--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body{
 
 .home_flex {
     width: 100%;
-    height:75vh;
+    height:100vh;
     display: flex;
     align-items: center;
     background-image: url("logo.svg");
@@ -41,12 +41,20 @@ body{
     background-position: center;
 }
 .section_cover_letter{
-    height:75vh;
+    height:100%;
     margin-top: 20vh;
     margin-left: 5vw;
     margin-right: 5vw;
     font-size: 30px;
+    margin-bottom: 20vh;
 }
-a:active {
-    background-color: yellow;
-  }
+.section_contact {
+    display: flex;
+    height: 50vh;
+    width:100%;
+    flex-direction: column;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
