--- a/styles.css
+++ b/styles.css
@@ -1,59 +1,185 @@
-body{
-    margin: 0 0 0 0;
-    background-color: #eeeeee;
-}
-
-.menu-li a{
-    display: block;
-    padding: 14px 16px;
-    text-decoration: none;
-    color: #ffffff;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.menu-li a:hover {
-    background-color: #111;
+:root {
+    --background: #ffffff;
+    --menu_hover: #00b0ff;
+    --heavy_text: #424242;
+    --light_text: #616161;
+    --extra_light_text: #b0bec5;
   }
 
-.menu-ul {
-    background-color: #333;
-    margin: 0;
-    padding: 0;
+body{
+    margin: 0 0 0 0;
+    background: linear-gradient(172deg, var(--background), #fbe9e7);
+    background-size: 400% 400%;
+    
+    -webkit-animation: AnimationName 30s ease infinite;
+    -moz-animation: AnimationName 30s ease infinite;
+    animation: AnimationName 30s ease infinite;
+    
+    @-webkit-keyframes AnimationName {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
+    @-moz-keyframes AnimationName {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
+    @keyframes AnimationName {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
+    font-family: 'Roboto', sans-serif;
+}
+
+.menu_nav {
+    box-shadow: 0 1px 1px rgba(0,0,0,0.09), 0 1px 1px rgba(0,0,0,0.20);
+}
+.menu_ul {
     display: flex;
     flex-direction: row;
+    margin: 0px 0px 0px 0px;
+    height:100%;
+}
+.menu_li {
+    align-self: flex-start;
+    flex-grow: .025;
     list-style-type: none;
-    position: fixed;
-    top: 0;
-    width:100%;
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+.menu_a,.menu_a:visited  {
+    height:100%;
+    text-decoration: none;
+    color:var(--heavy_text);
+    padding-top: 16px;
+    padding-bottom: 16px;
+    font-size: calc(11px + (14 - 11) * ((100vw - 300px) / (1600 - 300)));
+    padding-left: 2px;
+    padding-right: 2px;
 }
 
+.menu_a:hover {
+    color: var(--menu_hover);
+    border-style: none none solid none;
+}
 
 .home_flex {
+    display: flex;
     width: 100%;
-    height:100vh;
-    display: flex;
-    align-items: center;
-    background-image: url("logo.svg");
-    background-color: black;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.section_cover_letter{
-    height:100%;
-    margin-top: 20vh;
-    margin-left: 5vw;
-    margin-right: 5vw;
-    font-size: 30px;
-    margin-bottom: 20vh;
-}
-.section_contact {
-    display: flex;
-    height: 50vh;
     flex-direction: column;
-    margin-left: 5vw;
-    margin-right: 5vw;
-    padding: 0;
-    font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
+    justify-content: center;
+    align-items: center;
+    align-content: flex-start;
+}
+.home_text {
+}
+
+.name {
+    font-weight: 400;
+    color: var(--heavy_text);
+    font-style: normal;
+    font-size: calc(45px + (64 - 45) * ((100vw - 300px) / (1600 - 300)));
+}
+
+.sub_name {
+    color: var(--light_text);
+    font-weight: 100;
+    font-size: calc(18px + (24 - 18) * ((100vw - 300px) / (1600 - 300)));
+}
+
+.experience_flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: flex-start;
+}
+
+.experience_title {
+    font-size: calc(36px + (48 - 36) * ((100vw - 300px) / (1600 - 300)));
+    margin: 0px 0px 0px 0px;
+    font-weight: 400;
+    color:var(--heavy_text);
+    font-style: normal;
+}
+
+.company_name {
+    font-size: calc(24px + (36 - 24) * ((100vw - 300px) / (1600 - 300)));
+    color: var(--heavy_text);
+    font-weight: 100;
+    margin: 6px 0px 6px 0px;
+}
+.company_date_location_box {
+    display: flex;
+    flex-direction: row;;
+}
+
+.company_date {
+    margin: 2px 18px 2px 18px;
+    color: var(var(--light_text));
+
+}
+
+.company_location {
+    margin: 2px 18px 2px 18px;
+    color: var(var(--light_text));
+}
+
+
+
+.education_flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: flex-start;
+}
+
+.education_title {
+    font-size: calc(36px + (48 - 36) * ((100vw - 300px) / (1600 - 300)));
+    margin: 0px 0px 0px 0px;
+    font-weight: 400;
+    color:var(--heavy_text);
+    font-style: normal;
+}
+
+.education_university_date_box {
+    display: flex;
+    flex-direction: row;;
+}
+
+.university_name {
+    margin: 2px 16px 2px 16px;
+    color: var(var(--light_text));
+
+}
+
+.graduation_date {
+    margin: 2px 16px 2px 16px;
+    color: var(var(--light_text));
+}
+
+.degree_name {
+    margin: 2px 16px 2px 16px;
+    color: var(var(--light_text));
+}
+
+.home_text,.experience_text,.education_text {
+    width: calc(300px + (600 - 300) * ((100vw - 300px) / (1600 - 300)));
+} 
+
+.space {
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    height: 6vh;
+    border-style: none none none solid;
+    border-color: var(--extra_light_text);
+    border-width: 1px;
+    width: calc(300px + (600 - 300) * ((100vw - 300px) / (1600 - 300)));
+}
+
+.space_no_border {
+    height: 10vh;
 }
