--- a/styles.css
+++ b/styles.css
@@ -9,28 +9,6 @@
 
 body{
     margin: 0 0 0 0;
-    background: linear-gradient(172deg, var(--background), #fbe9e7);
-    background-size: 400% 400%;
-    
-    -webkit-animation: AnimationName 30s ease infinite;
-    -moz-animation: AnimationName 30s ease infinite;
-    animation: AnimationName 30s ease infinite;
-    
-    @-webkit-keyframes AnimationName {
-        0%{background-position:0% 50%}
-        50%{background-position:100% 50%}
-        100%{background-position:0% 50%}
-    }
-    @-moz-keyframes AnimationName {
-        0%{background-position:0% 50%}
-        50%{background-position:100% 50%}
-        100%{background-position:0% 50%}
-    }
-    @keyframes AnimationName {
-        0%{background-position:0% 50%}
-        50%{background-position:100% 50%}
-        100%{background-position:0% 50%}
-    }
     font-family: 'Roboto', sans-serif;
 }
 
@@ -92,7 +70,7 @@ body{
 .company_name {
     font-size: calc(24px + (36 - 24) * ((100vw - 300px) / (1600 - 300)));
     color: var(--heavy_text);
-    font-weight: 100;
+    font-weight: 400;
     margin: 6px 0px 6px 0px;
 }
 .company_date_location_box,.education_university_date_box {
@@ -102,7 +80,9 @@ body{
 
 .company_date, .company_location {
     margin: 2px 18px 2px 18px;
+    font-weight: 100;
     color: var(var(--light_text));
+    font-size: calc(15px + (20 - 15) * ((100vw - 300px) / (1600 - 300)));
 
 }
 
@@ -110,7 +90,7 @@ body{
 .education_title,.contact_title,.experience_title {
     font-size: calc(36px + (48 - 36) * ((100vw - 300px) / (1600 - 300)));
     margin: 0px 0px 0px 0px;
-    font-weight: 400;
+    font-weight: 900;
     color:var(--heavy_text);
     font-style: normal;
 }
@@ -118,6 +98,8 @@ body{
 .graduation_date,.degree_name,.university_name {
     margin: 2px 16px 2px 16px;
     color: var(var(--light_text));
+    font-weight: 100;
+    font-size: calc(15px + (20 - 15) * ((100vw - 300px) / (1600 - 300)));
 }
 
 .home_text,.experience_text,.education_text,.contact_text {
@@ -127,7 +109,7 @@ body{
 .space {
     margin-top: 2vh;
     margin-bottom: 2vh;
-    height: 6vh;
+    height: 4vh;
     border-style: none none none solid;
     border-color: var(--extra_light_text);
     border-width: 1px;
