--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,33 @@
 body{
     margin: 0 0 0 0;
     font-family: 'Roboto', sans-serif;
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 2s; /* Firefox < 16 */
+     -ms-animation: fadein 2s; /* Internet Explorer */
+      -o-animation: fadein 2s; /* Opera < 12.1 */
+      animation: fadein 2s;
+}
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 
 .menu_nav {
@@ -86,6 +113,9 @@ body{
 
 }
 
+.company_location {
+    width: 10vw;
+}
 
 .education_title,.contact_title,.experience_title {
     font-size: calc(36px + (48 - 36) * ((100vw - 300px) / (1600 - 300)));
